[project]
name = "gicisky_tag"
version = "0.1.1"
description = "Tools to write an image to a Gicisky tag"
authors = [
    {name = "Federico Poli", email = "federpoli@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.22,<0.23",
    "pillow>=11.0,<12.0",
    "numpy>=2.2,<3.0",
]

[project.scripts]
gicisky-tag-writer = "gicisky_tag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
